// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typeahead> AllowNew story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> ClearButton story renders snapshot 1`] = `
<div
  className="rbt has-aux"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value="Alabama"
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
  <div
    className="rbt-aux"
  >
    <button
      aria-label="Clear"
      className="close btn-close rbt-close"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
        className="rbt-close-content"
      >
        ×
      </span>
      <span
        className="sr-only visually-hidden"
      >
        Clear
      </span>
    </button>
  </div>
</div>
`;

exports[`<Typeahead> Controlled story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> CustomInput story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <div
      className="form-floating"
    >
      <input
        aria-autocomplete="both"
        aria-expanded={false}
        aria-haspopup="listbox"
        autoComplete="off"
        className="form-control"
        id="floatingInput"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Choose a state..."
        role="combobox"
        type="text"
        value=""
      />
      <label
        htmlFor="floatingInput"
      >
        Choose a state...
      </label>
    </div>
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> CustomMenu story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> Default story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
</div>
`;

exports[`<Typeahead> InputGrouping story renders snapshot 1`] = `
<div
  className="input-group"
>
  <span
    className="input-group-text"
  >
    $
  </span>
  <div
    className="rbt"
    style={
      Object {
        "outline": "none",
        "position": "relative",
      }
    }
    tabIndex={-1}
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "height": "100%",
          "position": "relative",
        }
      }
    >
      <input
        aria-autocomplete="both"
        aria-expanded={false}
        aria-haspopup="listbox"
        autoComplete="off"
        className="rbt-input-main form-control rbt-input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Choose a state..."
        role="combobox"
        type="text"
        value=""
      />
      <input
        aria-hidden={true}
        className="rbt-input-hint"
        readOnly={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "boxShadow": "none",
            "color": "rgba(0, 0, 0, 0.54)",
            "left": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
  </div>
  <span
    className="input-group-text"
  >
    .00
  </span>
</div>
`;

exports[`<Typeahead> LoadingState story renders snapshot 1`] = `
<div
  className="rbt has-aux"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
  <div
    className="rbt-aux"
  >
    <div
      className="rbt-loader spinner-border spinner-border-sm"
      role="status"
    >
      <span
        className="sr-only visually-hidden"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`<Typeahead> MultiSelect story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    className="rbt-input-multi form-control rbt-input"
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <div
      className="rbt-input-wrapper"
    >
      <div
        className="rbt-token rbt-token-removeable"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="rbt-token-label"
        >
          Alabama
        </div>
        <button
          aria-label="Remove"
          className="close btn-close rbt-close rbt-token-remove-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <span
            aria-hidden="true"
            className="rbt-close-content"
          >
            ×
          </span>
          <span
            className="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        className="rbt-token rbt-token-removeable"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="rbt-token-label"
        >
          Alaska
        </div>
        <button
          aria-label="Remove"
          className="close btn-close rbt-close rbt-token-remove-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <span
            aria-hidden="true"
            className="rbt-close-content"
          >
            ×
          </span>
          <span
            className="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        className="rbt-token rbt-token-removeable"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="rbt-token-label"
        >
          Arizona
        </div>
        <button
          aria-label="Remove"
          className="close btn-close rbt-close rbt-token-remove-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <span
            aria-hidden="true"
            className="rbt-close-content"
          >
            ×
          </span>
          <span
            className="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        className="rbt-token rbt-token-removeable"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="rbt-token-label"
        >
          Arkansas
        </div>
        <button
          aria-label="Remove"
          className="close btn-close rbt-close rbt-token-remove-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
          type="button"
        >
          <span
            aria-hidden="true"
            className="rbt-close-content"
          >
            ×
          </span>
          <span
            className="sr-only visually-hidden"
          >
            Remove
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "flex": 1,
            "height": "100%",
            "position": "relative",
          }
        }
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-multiselectable={true}
          autoComplete="off"
          className="rbt-input-main"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          role="combobox"
          style={
            Object {
              "backgroundColor": "transparent",
              "border": 0,
              "boxShadow": "none",
              "cursor": "inherit",
              "outline": "none",
              "padding": 0,
              "width": "100%",
              "zIndex": 1,
            }
          }
          type="text"
          value=""
        />
        <input
          aria-hidden={true}
          className="rbt-input-hint"
          readOnly={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "boxShadow": "none",
              "color": "rgba(0, 0, 0, 0.54)",
              "left": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          tabIndex={-1}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Typeahead> Pagination story renders snapshot 1`] = `
<div
  className="rbt"
  style={
    Object {
      "outline": "none",
      "position": "relative",
    }
  }
  tabIndex={-1}
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "position": "relative",
      }
    }
  >
    <input
      aria-autocomplete="both"
      aria-expanded={false}
      aria-haspopup="listbox"
      autoComplete="off"
      className="rbt-input-main form-control rbt-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Choose a state..."
      role="combobox"
      type="text"
      value=""
    />
    <input
      aria-hidden={true}
      className="rbt-input-hint"
      readOnly={true}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "boxShadow": "none",
          "color": "rgba(0, 0, 0, 0.54)",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
      tabIndex={-1}
      value=""
    />
  </div>
</div>
`;
